[gd_scene load_steps=6 format=3 uid="uid://c3g1gp0reiltq"]

[ext_resource type="Script" uid="uid://bag7v4s5v88jw" path="res://script/wifi_networks.gd" id="1_xtqbd"]
[ext_resource type="Texture2D" uid="uid://d0egr702q86ln" path="res://asset/title-cntr-v3.png" id="2_hax0g"]
[ext_resource type="Script" uid="uid://dxfujov7vai6f" path="res://addons/onscreenkeyboard/onscreen_keyboard.gd" id="2_xtqbd"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="3_mdl3b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hax0g"]
texture = ExtResource("2_hax0g")

[node name="WiFiNetworks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xtqbd")

[node name="BackgroundColor" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03137255, 0.03137255, 0.03137255, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.87058824, 0.21960784, 0.13725491, 1)
theme_override_font_sizes/font_size = 60
text = "Wi-Fi"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_top = 120.0
offset_right = 240.0
offset_bottom = 170.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hax0g")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -360.5
offset_right = 300.0
offset_bottom = 439.5
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="NetworksVBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="StatusContainer" type="VBoxContainer" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -142.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="StatusLabel" type="Label" parent="StatusContainer"]
layout_mode = 2
theme = ExtResource("3_mdl3b")
text = "Scanning for networks"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="StatusContainer"]
layout_mode = 2
alignment = 1

[node name="disconnectButton" type="Button" parent="StatusContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mdl3b")
text = "Disconnect Wi-Fi"

[node name="RetryButton" type="Button" parent="StatusContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mdl3b")
text = "Retry Wi-Fi Scan"

[node name="Overlay" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Overlay"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="Overlay/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 480)
layout_mode = 2

[node name="Label" type="Label" parent="Overlay/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Password for {wifi_name}"
horizontal_alignment = 1

[node name="PasswordLine" type="LineEdit" parent="Overlay/PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"

[node name="OnscreenKeyboard" type="PanelContainer" parent="Overlay/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_xtqbd")
metadata/_custom_type_script = "uid://dxfujov7vai6f"
